# test-dependabot-with-poetry

./: pyproject.toml
.github/: dependabot.yml
