[tool.poetry]
name = "test-dependabot-with-poetry"
version = "0.0.0"
description = "Test Dependabot with Poetry"
authors = ["Yaraslau Zhylko <YaraslauZhylko@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.0"
arrow = "^0.10.0"

[tool.poetry.dev-dependencies]
black = {version = "==21.12b0", allows-prereleases = true}

[build-system]
requires = ["poetry>=1.1.11"]
build-backend = "poetry.masonry.api"
